# tripleo-mistral-workflows

./: .gitignore  README.rst  setup.cfg  setup.py
tripleo/: baremetal.yaml
