[metadata]
name = tripleo-mistral-workflows
summary = Mistral workflows for deploying OpenStack with OpenStack.
description-file =
    README.rst
author = OpenStack
author_email = openstack-dev@lists.openstack.org
license = Apache License (2.0)
home-page = https://github.com/dprince/tripleo-mistral-workflows
classifier =
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Other
    Environment :: Console
